--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.pradeip.app</groupId>
-  <artifactId>bandhawgarh</artifactId>
+  <artifactId>sdl-marathon</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>Simple project in JSP and Servlet</name>
@@ -38,7 +38,7 @@
     </dependency>
   </dependencies>
   <build>
-    <finalName>bandhawgarh</finalName>
+    <finalName>sdl-marathon</finalName>
     <plugins>
         <plugin>
             <groupId>org.codehaus.mojo</groupId>
